refactor: Adapt for AGP 9.x